fix(storybook): avoid navbar overlap on storybook

--- a/ui/src/Styles/Percy.scss
+++ b/ui/src/Styles/Percy.scss
@@ -6,3 +6,8 @@
 body {
   font-family: sans-serif !important;
 }
+
+.dropdown-menu {
+  position: relative !important;
+  float: none !important;
+}
